@startuml
skinparam linetype ortho

enum ROLE {
  OWNER
  ADMIN
  USER
}

enum STAT_TYPE {
  PEOPLE
  GENRE
  AGE
}

enum DEVICES {
  SENSOR
  ACTUATOR
}

entity "User" {
  *id: uuid
  --
  username: string
  p_hash: string
  role: ROLE
}

entity "UserInZone" {
  *user_id: uuid <<FK>>
  *zone_id: uuid <<FK>>
  created_at: timestamp
}

entity "Zone" {
  *id: uuid
  --
  name: string
}

entity "Room" {
  *id: uuid
  --
  zone_id: uuid <<FK>>
  name: string
}

entity "Device" {
  *id: uuid
  --
  room_id: uuid <<FK>>
  ip: string
  status: boolean
  type: DEVICES
}

entity "Stats" {
  *id: uuid
  --
  device_id: uuid <<FK>>
  quantity: int
  type: STAT_TYPE
  time: timestamp
}

entity "Log" {
  *id: uuid
  --
  device_id: uuid <<FK>>
  time: timestamp
  body: text
  code: int
}

User "1" -- "n" UserInZone
Zone "1" -- "n" UserInZone
Zone "1" -- "n" Room
Room "1" -- "n" Device
Device "1" -- "n" Stats
Device "1" -- "n" Log

@enduml
